modifications done to clocks and time_managers
